 *  documentation pages. It is not a project source file.
 */

 /** \page Page_ChangeLog Project Changelog
  *
  *  \section Sec_ChangeLogXXXXXX Version XXXXXX
  *  <b>New:</b>
  *  - Core:
  *   - Added support for the BitWizard Multio and Big-Multio boards
  *  - Library Applications:
  *   - Modified the CDC Host demos to set a default CDC Line Encoding on enumerated devices
  *
  *  <b>Changed:</b>
  *  - Core:
  *   - Android Accessory Host property strings changed from a struct of pointer to an array to prevent unaligned access on greater than 8-bit architectures
  *  - Library Applications:
  *   - Raised the guard bits in the AVRISP-MKII clone project when in PDI and TPI to 32, to prevent communication errors on low quality connections to a target
  *
  *  <b>Fixed:</b>
  *  - Core:
  *   - Fixed possible enumeration error if the user application selects a pipe other than the default Control pipe between the Powered and Default states of
  *     the host state machine
  *   - Fixed compile error for the UC3 architecture when INTERRUPT_CONTROL_ENDPOINT is specified (thanks to Andrus Aaslaid)
  *  - Library Applications:
  *   - None
  *
  *  \section Sec_ChangeLog120219 Version 120219
  *  <b>New:</b>
  *  - Core:
  *   - Added support for the XMEGA A3BU Xplained board
  *   - Added support for the new B series XMEGA devices
  *   - Added support for version 2 of the Teensy boards (thanks to Christoph Redecker)
  *   - Added support for the USB2AX boards, hardware revision 1-3
  *   - Added new Android Accessory Host class driver
  *   - Added new USB_Host_GetDescriptor(), USB_Host_GetDeviceConfiguration() and USB_Host_GetInterfaceAltSetting() functions
  *   - Added new CALLBACK_Audio_Device_GetSetInterfaceProperty() callback to the Audio Device Class driver
  *   - Added new LEDs_Disable(), Buttons_Disable() and Joystick_Disable() functions to the board hardware drivers