@@ -155,6 +155,13 @@ void SetupHardware(void)
 	Serial_CreateStream(NULL);
 
 	#if defined(USB_CAN_BE_DEVICE)
+	/* Check if the Dataflash is working, abort if not */
+	if (!(DataflashManager_CheckDataflashOperation()))
+	{
+		LEDs_SetAllLEDs(LEDMASK_USB_ERROR);
+		for(;;);
+	}
+
 	/* Clear Dataflash sector protections, if enabled */
 	DataflashManager_ResetDataflashProtections();
 	#endif
